src/objects/TracHier__History_Log__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Line_Number__c</fullName>
        <label>Line Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracHier__Log_Number__c</fullName>
        <label>Log Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>History Log</label>
    <nameField>
        <label>History Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>